@@ -7,4 +7,5 @@ omg-cli
 *.dylib
 /.vagrant
 .DS_Store
-/zig-cache
+zig-cache
+zig-out
